codepkg/objects/Order.object
<CustomObject>
    <fields>
        <fullName>faxType__c</fullName>
        <description>zPaper: Updated with the Doc Type of the last document received, if the doc type is indicated</description>
        <label>Document Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>latestFax__c</fullName>
        <description>zPaper: Updated with the transaction Date/Time any time a document is sent or received</description>
        <label>Latest Document</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>newFax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>zPaper: Checked any time a new document is received</description>
        <label>New Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>outboundFaxTemplate__c</fullName>
        <description>zPaper: Used for sending XML information to the zPaper Outbound Message Agent as part of a Salesforce Flow</description>
        <label>Outbound Fax Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>producedId__c</fullName>
        <description>zPaper: Updated with the zPaper database ID of the received document when a document is received and associated with the record in question</description>
        <label>Produced ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>receivedId__c</fullName>
        <description>zPaper: Updated with the zPaper database ID of the sent document when a document is sent from the record in question</description>
        <label>Received ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sentFaxAt__c</fullName>
        <description>zPaper: Updated with the transaction Date/Time any time a document is sent</description>
        <label>Sent Document At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sentFaxStatus__c</fullName>
        <description>zPaper: Updated when the status of an outbound delivery attempt is known. Value is either &quot;Sent&quot; or &quot;Failed&quot; plus the failure reason</description>
        <label>Sent Document Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sentFaxTo__c</fullName>
        <description>zPaper: Updated with the destination of the sent document when an outbound fax is attempted</description>
        <label>Sent Document To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sentFax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>zPaper: Checked whenever a document is sent</description>
        <label>Sent Document</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>